--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ autobahn==23.1.2
 Automat==22.10.0
 billiard==4.2.0
 celery==5.3.6
+certifi==2023.11.17
 cffi==1.16.0
 channels==4.0.0
 channels-redis==4.1.0
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -22,6 +24,7 @@ Django==4.2.6
 django-celery-results==2.5.1
 django-configurations==2.5
 django-cors-headers==4.3.0
+django-debug-toolbar==4.2.0
 django-rest-passwordreset==1.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
@@ -51,6 +54,7 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
+requests==2.31.0
 service-identity==23.1.0
 six==1.16.0
 sqlparse==0.4.4
@@ -60,7 +64,7 @@ txaio==23.1.1
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
+urllib3==2.1.0
 vine==5.1.0
 wcwidth==0.2.12
 zope.interface==6.1
-django-debug-toolbar
