--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  auth:
+      name: auth
+      external: true
 services:
   arsenal:
     build: .
@@ -7,3 +11,5 @@ services:
       - .:/code
     ports:
       - "8001:8001"
+    networks:
+      - auth
