--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ kombu==5.3.4
 mccabe==0.7.0
 msgpack==1.0.7
 packaging==23.2
+pika==1.3.2
 platformdirs==4.0.0
 prompt-toolkit==3.0.41
 psycopg2==2.9.9
