messaging: Implement consumer for messages from leluchat_messaging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build: .
     command: python manage.py runserver 0.0.0.0:8001
     container_name: leluchat_arsenal
+    environment:
+      - DJANGO_CONSUME_MESSAGES=True
     volumes:
       - .:/code
     ports:
