--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 networks:
-  auth:
-    name: auth
+  leluchat:
+    name: leluchat
     external: true
 services:
   arsenal:
@@ -14,4 +14,4 @@ services:
     ports:
       - "8001:8001"
     networks:
-      - auth
+      - leluchat
